[project]
name = "nacsos-core"
version = "0.23.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiosmtplib==5.0.0",
    "dramatiq-abort==1.2.1",
    "dramatiq-dashboard==0.4.0",
    "dramatiq[redis,watch]==1.18.0",
    "email-validator==2.3.0",
    "fastapi==0.121.3",
    "hypercorn==0.18.0",
    "passlib[bcrypt]==1.7.4",
    "pymitter==1.1.3",
    "python-multipart==0.0.20",
    "toml==0.10.2",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
remote=[
    "nacsos-data[utils,scripts] @ git+ssh://git@gitlab.pik-potsdam.de/mcc-apsis/nacsos/nacsos-data.git@v0.23.0"
]
local=[
    "nacsos-data[utils,scripts]"
]

[tool.uv.sources]
nacsos-data = [
    { path = "../nacsos_data", editable = true},
#    { git = "git+ssh://git@gitlab.pik-potsdam.de/mcc-apsis/nacsos/nacsos-data.git", tag = "v0.23.0" },
]

[dependency-groups]
dev=[
    "flake8==7.3.0",
    "tox==4.32.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "mypy==1.18.2",
    "types-toml==0.10.8.20240310",
    "types-PyYAML==6.0.12.20250915",
    "types-aiofiles==25.1.0.20251011",
]


[tool.pytest.ini_options]
addopts = "--cov=server"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "server"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


