[project]
name = "nacsos-core"
version = "0.24.10"
description = "NACSOS REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiosmtplib==5.0.0",
    "dramatiq-abort==1.2.1",
    #"dramatiq-dashboard==0.4.0",
    "dramatiq[redis,watch]==2.0.0",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "hypercorn==0.18.0",
    "passlib[bcrypt]==1.7.4",
    "pymitter==1.1.3",
    "python-multipart==0.0.21",
    "toml==0.10.2",
    "uvicorn==0.40.0",
    #    "systemd-python==235",
]

[project.optional-dependencies]
light = [
    "nacsos_data[utils] @ git+ssh://git@gitlab.pik-potsdam.de/mcc-apsis/nacsos/nacsos-data.git@v0.24.10"
]
full = [
    "nacsos_data[utils,scripts,priority] @ git+ssh://git@gitlab.pik-potsdam.de/mcc-apsis/nacsos/nacsos-data.git@v0.24.10"
]

[tool.uv.sources]
nacsos_data = { path = "../nacsos_data", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "mypy==1.19.1",
    "types-toml==0.10.8.20240310",
    "types-PyYAML==6.0.12.20250915",
    "types-aiofiles==25.1.0.20251011",
]

[tool.ruff]
line-length = 160
indent-width = 4
target-version = "py313"
include = ["pyproject.toml", "server/**/*.py"]
exclude = []

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9"]
ignore = ["E203", "E501", "E712", "E741", "B010", "B009", "B904", "B008"]  # , "E126", "W503",

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 12

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
follow_imports = "silent"

files = ["server"]
exclude = []

check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
strict_optional = true
explicit_package_bases = false
show_traceback = true
incremental = false

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
